<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Order.OrderFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/yellow1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="match_parent"
                        android:layout_height="240dp"
                        android:layout_marginTop="16dp"
                        android:background="@color/yellow1"
                        app:srcCompat="@drawable/unnamed__1_" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="355dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:background="@color/yellow1"
                        android:fontFamily="@font/baloo_da"
                        android:text="@string/PapayaSalad"
                        android:textAlignment="center"
                        android:textColor="@android:color/background_dark"
                        android:textSize="18sp" />

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="match_parent"
                        android:layout_height="243dp"
                        android:layout_marginTop="16dp"
                        android:background="@color/yellow1"
                        app:srcCompat="@drawable/unnamed" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="478dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:background="@color/yellow1"
                        android:fontFamily="@font/baloo_da"
                        android:text="@string/YumSeafood"
                        android:textAlignment="center"
                        android:textColor="@color/white_text_color"
                        android:textSize="18sp" />

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="match_parent"
                        android:layout_height="272dp"
                        android:layout_marginTop="16dp"
                        android:background="@color/yellow1"
                        app:srcCompat="@drawable/happyfresh_thai_green_curry_with_chicken_940x700" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="350dp"
                        android:background="@color/yellow1"
                        android:fontFamily="@font/baloo_da"
                        android:text="@string/Greencurry"
                        android:textAlignment="center"
                        android:textColor="@color/white_text_color"
                        android:textSize="18sp" />

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="match_parent"
                        android:layout_height="191dp"
                        android:layout_marginTop="16dp"
                        android:background="@color/yellow1"
                        app:srcCompat="@drawable/hc_cuisine_14s" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="447dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:background="@color/yellow1"
                        android:fontFamily="@font/baloo_da"
                        android:text="@string/PadThai"
                        android:textAlignment="center"
                        android:textColor="@color/white_text_color"
                        android:textSize="18sp" />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="match_parent"
                        android:layout_height="284dp"
                        android:layout_marginTop="16dp"
                        android:background="@color/yellow1"
                        app:srcCompat="@drawable/tomyam" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="match_parent"
                        android:layout_height="563dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:background="@color/yellow1"
                        android:fontFamily="@font/baloo_da"
                        android:text="@string/TomYumKung"
                        android:textAlignment="center"
                        android:textColor="@color/white_text_color"
                        android:textSize="18sp" />

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="match_parent"
                        android:layout_height="240dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        android:background="@color/yellow1"
                        app:srcCompat="@drawable/shutterstock_280684463_1" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="match_parent"
                        android:layout_height="469dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:background="@color/yellow1"
                        android:fontFamily="@font/baloo_da"
                        android:text="@string/FriedRice"
                        android:textAlignment="center"
                        android:textColor="@color/white_text_color"
                        android:textSize="18sp" />

                </LinearLayout>
            </ScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>